model User {
  id                Int               @id @default(autoincrement())
  email             String            @unique
  name              String?
  password          String
  otp               String?
  otpPurpose        OtpPurpose?
  bankManager       BankManager[]
  cryptoPortfolios  CryptoPortfolio[]
  expenses          Expense[]
  expenseCategories ExpenseCategory[]
}

enum OtpPurpose {
  VERIFY_ACCOUNT
  RESET_PASSWORD
}
